--- a/app/src/main/res/layout/fragment_matches.xml
+++ b/app/src/main/res/layout/fragment_matches.xml
@@ -1,18 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
     <TextView
-        android:id="@+id/tv_content"
-        android:layout_width="wrap_content"
+        android:id="@+id/tv_loading"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="matches" />
+        android:layout_centerInParent="true"
+        android:gravity="center"
+        android:text="Loading ..."
+        android:textColor="#000000"
+        android:textSize="20sp" />
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_matches"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:visibility="gone">
 
     </android.support.v7.widget.RecyclerView>
-</FrameLayout>
+</RelativeLayout>
